[package]
name = "tg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "gw"
# path = "bin/gw/main.rs"

[[example]]
name = "chat_server"
path = "examples/chat_server/main.rs"

[dependencies]
async-channel = "1.7.1"
async-trait = "0.1.57"
axum = "0.5.16"
bytes = "1.2.1"
chrono = "0.4.22"
futures-util = "0.3.23"
hex = "0.4.3"
lockfree-object-pool = "0.1.3"
lazy_static = "1.4.0"
prost = "0.10"
serde = { version = "1.0.145", features = ["derive"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = "0.17.2"
tonic = "0.8.1"
tonic-build = "0.8.0"
tracing-appender = "0.2.2"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter","time","local-time"] }
type-layout = "0.2.0"
url = "2.2.2"






