[package]
name = "tg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "gw"
# path = "bin/gw/main.rs"

[[example]]
name = "chat_server"
path = "examples/chat_server/main.rs"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "pack_bench"
path = "benches/pack_bench.rs"
harness = false

[[bench]]
name = "map_bench"
path = "benches/map_bench.rs"
harness = false

[[bench]]
name = "oper_bench"
path = "benches/oper_bench.rs"
harness = false

[dependencies]
async-channel = "1.7.1"
async-trait = "0.1.57"
axum = "0.5.16"
bytes = "1.2.1"
chrono = "0.4.22"
futures-util = "0.3.23"
hex = "0.4.3"
lockfree-object-pool = "0.1.3"
lazy_static = "1.4.0"
prost = "0.10" # protobuf for rust
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.21.2", features = ["full", "tracing"] }
tokio-io-timeout = "1.2.0"
tokio-tungstenite = "0.17.2" # websocket for rust
tonic = "0.8.1" # grpc for rust
tonic-build = "0.8.0"
tracing-appender = "0.2.2"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "time", "local-time"] }
type-layout = "0.2.0"
url = "2.2.2"
hashbrown = "0.12.3"

[profile.release]
codegen-units = 1
opt-level = "s"
lto = "fat"
panic = "abort"

[build]
rustflags = ["-C target-cpu=native"]